<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView"
        android:layout_width="369dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#7AD5E1"
        android:backgroundTint="#00BCD4"
        android:text="@string/nama_lengkap_hendro_ardiyanto"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="367dp"
        android:layout_height="42dp"
        android:background="#00BCD4"
        android:text="@string/nip_19790924202211003"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:background="#00BCD4"
        android:text="@string/mata_pelajaran_pkn"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="430dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="366dp"
        android:layout_height="61dp"
        android:background="#00BCD4"
        android:text="@string/alamat_jamus_rt_18_rw_05_kecamatan_mranggen"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="497dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="366dp"
        android:layout_height="51dp"
        android:background="#00BCD4"
        android:text="@string/ttl_demak_24_sebtember_1979"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="589dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="365dp"
        android:layout_height="44dp"
        android:background="#00BCD4"
        android:text="@string/agama_islam"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="671dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="232dp"
        android:layout_height="188dp"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="68dp"
        tools:srcCompat="@drawable/fotoguru" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="351dp"
        android:layout_height="47dp"
        android:layout_marginEnd="28dp"
        android:background="#CDDC39"
        android:text="@string/profilguru"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>