<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alam"
    tools:context=".MainActivity3">

    <Button
        android:id="@+id/button"
        android:layout_width="201dp"
        android:layout_height="68dp"
        android:text="@string/profilapp"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="416dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="202dp"
        android:layout_height="71dp"
        android:text="@string/siswaprofil"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="518dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="106dp"
        tools:srcCompat="@drawable/smk"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:text="@string/teacher_profil_app"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="35dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>